new bugs added and homepage tweets updated

--- a/public/beta.html
+++ b/public/beta.html
@@ -84,7 +84,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>714</span> testers using it. There are <span>14</span> open bugs and <span>4</span> that have been squashed.</h2>
+				</script></span> days and has <span>714</span> testers using it. There are <span>20</span> open bugs and <span>4</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -105,6 +105,12 @@
 				              </thead>   
 				              <tbody>
 				                <tr>
+				                    <td>Being able to change password is essential functionality</td>
+				                    <td>in progress</td>
+				                    <td><span class="label label-high">high</span>
+				                    </td>                                       
+				                </tr>
+				                <tr>
 				                    <td>Pasting from novlr into novlr in safari adds unnecessary line breaks</td>
 				                    <td>In progress</td>
 				                    <td><span class="label label-high">high</span>
@@ -112,6 +118,12 @@
 				                </tr>
 				                <tr>
 				                    <td>Should alert when going offline as it will no longer be saving and settings/add chapter won't work</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-high">high</span>
+				                    </td>                                       
+				                </tr>
+				                <tr>
+				                    <td>Pasting doesn't bring across bold, italic, strikethrough from google docs or evernote. Works from html.</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-high">high</span>
 				                    </td>                                       
@@ -132,25 +144,25 @@
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>      
 				                <tr>
-				                    <td>One report of full novel word count not accurate compared with per-chapter counts</td>
+				                    <td>One report of full novel word count not being accurate compared with per-chapter counts</td>
 				                    <td>Trying to replicate</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>        
 				                <tr>
-				                    <td>Pasting cutting off after first full stop in Windows Vista with Opera</td>
+				                    <td>One report of pasting cutting off after first full stop in Windows Vista with Opera</td>
 				                    <td>Trying to replicate</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>                                   
+				                <tr>
+				                    <td>Pasting unecessary line breaks when pasting from Word 2010 (and a couple of other unique scenarios)</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">medium</span></td>                                        
+				                </tr>                                    
 				                <tr>
 				                    <td>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr>                                     
-				                <tr>
-				                    <td>Pasting unecessary line breaks when pasting from Word 2010 (and a couple of other unique scenarios)</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr>                                    
 				                <tr>
 				                    <td>Need more margin at the bottom of the editor so that text doesn't ride right to bottom</td>
 				                    <td>in progress</td>
@@ -160,19 +172,39 @@
 				                    <td>Clicking away from the user menu only works if clicking into header. Should work if click away anywhere on the page.</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 				        
+				                <tr>
+				                    <td>Cursor should be in the text input when you click add chpater (shouldn't require a mouse click)</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
 				                    <td>The dialog/modal popups judder a little when they open (chrome)</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr> 
+				                </tr>  
 				                <tr>
-				                    <td>Shows text cursor in non-editable areas</td>
-				                    <td>Trying to replicate</td>
+				                    <td>Ipad 'Saved' overlaps the novel title</td>
+				                    <td>trying to replicate</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
-				                    <td>Chapters buttons need clearer on-focus borders</td>
+				                    <td>Safari CSS jiggling on chapter title</td>
+				                    <td>trying to replicate</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td>Shows text cursor in non-editable areas - should show default cursor</td>
+				                    <td>trying to replicate</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td>Number of words should have thousands separator (comma) in settings and bottom toolbar</td>
+				                    <td>in testing</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 				                
+				                <tr>
+				                    <td>Add chapter modal buttons need clearer on-focus borders</td>
 				                    <td>In progress</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
@@ -181,6 +213,7 @@
 				                    <td><span class="label label-fixed">fixed</span></td>
 				                    <td></td>                                        
 				                </tr>  
+				                <tr> 
 				                    <td><strike>When you first load the page, there are functions in place or title and name for a milisecond</strike></td>
 				                    <td><span class="label label-fixed">fixed</span></td>
 				                    <td></td>                                        
