--- a/public/index.html
+++ b/public/index.html
@@ -104,10 +104,10 @@
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				<blockquote class="twitter-tweet" lang="en"><p>For <a href="https://twitter.com/hashtag/writers?src=hash">#writers</a> who think <a href="https://twitter.com/ScrivenerApp">@ScrivenerApp</a> is too cluttered/complicated, this looks like a good alternative - <a href="http://t.co/2CHC0esBmY">http://t.co/2CHC0esBmY</a> <a href="https://twitter.com/novlrtweets">@novlrtweets</a></p>&mdash; Daniel Whyte IV (@danielwhyteiv) <a href="https://twitter.com/danielwhyteiv/statuses/481817527614316545">June 25, 2014</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/novlrtweets">@novlrtweets</a> Are we there yet? Are we there yet? Are we there yet? Are we there yet? Are we there yet? Are we there yet? Are we there yet...</p>&mdash; Andy Barratt (@apbarratt) <a href="https://twitter.com/apbarratt/statuses/493757034639400960">July 28, 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>By the way, <a href="https://twitter.com/novlrtweets">@novlrtweets</a>, I already adore everything about the Beta - well done on being awesome. Will keep playing around :)</p>&mdash; Joel Tennant (@ThatTennantGuy) <a href="https://twitter.com/ThatTennantGuy/statuses/505091435990102017">August 28, 2014</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/novlrtweets">@novlrtweets</a> 1000 words with my <a href="https://twitter.com/hashtag/novlrbeta?src=hash">#novlrbeta</a> woop! woop!</p>&mdash; Ebone (@EBee1Cherie) <a href="https://twitter.com/EBee1Cherie/statuses/503892679910895617">August 25, 2014</a></blockquote>
-				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>	
+				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/novlrtweets">@novlrtweets</a> LOVE the beta!! I think this could totally change everything about how I write!</p>&mdash; Bethany Scott (@bethanyrscott) <a href="https://twitter.com/bethanyrscott/statuses/505251162858475521">August 29, 2014</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				<div class="clear">&nbsp;</div>
 				<p><strong><a target="_blank" href="https://storify.com/novlrtweets/lovely-things-people-say-about-novlr">Read more lovely things</a></strong></p>
 			</div>
