--- a/public/beta.html
+++ b/public/beta.html
@@ -156,7 +156,7 @@
 				                <tr>
 				                    <td>Pasting unecessary line breaks when pasting from Word 2010 (and a couple of other unique scenarios)</td>
 				                    <td>reported</td>
-				                    <td><span class="label label-low">medium</span></td>                                        
+				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>                                    
 				                <tr>
 				                    <td>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</td>
