fixing link and grammar on beta page

--- a/public/beta.html
+++ b/public/beta.html
@@ -145,12 +145,12 @@
 				                </tr>      
 				                <tr>
 				                    <td>One report of full novel word count not being accurate compared with per-chapter counts</td>
-				                    <td>Trying to replicate</td>
+				                    <td>trying to replicate</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>        
 				                <tr>
 				                    <td>One report of pasting cutting off after first full stop in Windows Vista with Opera</td>
-				                    <td>Trying to replicate</td>
+				                    <td>trying to replicate</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>                                   
 				                <tr>
@@ -165,7 +165,7 @@
 				                </tr>                                     
 				                <tr>
 				                    <td>Need more margin at the bottom of the editor so that text doesn't ride right to bottom</td>
-				                    <td>in progress</td>
+				                    <td>in testing</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
@@ -253,7 +253,7 @@
 
 		<div class="container">
 			<div class="wrapper">
-				<h2>Read our <a href="blogs.novlr.org">blogs</a> for inspiration or view our <a href="/features.html">features page</a> for an in-depth look.</h2>
+				<h2>Read our <a href="http://blogs.novlr.org">blogs</a> for inspiration or view our <a href="/features.html">features page</a> for an in-depth look.</h2>
 			</div>
 		</div>
 		<div class="container grey">
