updated beta bugs

--- a/public/beta.html
+++ b/public/beta.html
@@ -84,7 +84,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>714</span> testers using it. There are <span>20</span> open bugs and <span>4</span> that have been squashed.</h2>
+				</script></span> days and has <span>714</span> testers using it. There are <span>15</span> open bugs and <span>10</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -104,12 +104,6 @@
 				                  </tr>
 				              </thead>   
 				              <tbody>
-				                <tr>
-				                    <td>Being able to change password is essential functionality</td>
-				                    <td>in progress</td>
-				                    <td><span class="label label-high">high</span>
-				                    </td>                                       
-				                </tr>
 				                <tr>
 				                    <td>Pasting from novlr into novlr in safari adds unnecessary line breaks</td>
 				                    <td>In progress</td>
@@ -142,12 +136,7 @@
 				                    <td>Tab indentation not always preserved</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
-				                </tr>      
-				                <tr>
-				                    <td>One report of full novel word count not being accurate compared with per-chapter counts</td>
-				                    <td>trying to replicate</td>
-				                    <td><span class="label label-medium">medium</span></td>                                        
-				                </tr>        
+				                </tr>            
 				                <tr>
 				                    <td>One report of pasting cutting off after first full stop in Windows Vista with Opera</td>
 				                    <td>trying to replicate</td>
@@ -163,11 +152,6 @@
 				                    <td>reported</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr>                                     
-				                <tr>
-				                    <td>Need more margin at the bottom of the editor so that text doesn't ride right to bottom</td>
-				                    <td>in testing</td>
-				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr> 
 				                <tr>
 				                    <td>Clicking away from the user menu only works if clicking into header. Should work if click away anywhere on the page.</td>
 				                    <td>reported</td>
@@ -194,20 +178,40 @@
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
-				                    <td>Shows text cursor in non-editable areas - should show default cursor</td>
-				                    <td>trying to replicate</td>
-				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr> 
-				                <tr>
-				                    <td>Number of words should have thousands separator (comma) in settings and bottom toolbar</td>
-				                    <td>in testing</td>
-				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr> 				                
-				                <tr>
 				                    <td>Add chapter modal buttons need clearer on-focus borders</td>
 				                    <td>In progress</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
+				                <tr>
+				                <tr>
+				                    <td><strike>Shows text cursor in non-editable areas - should show default cursor</strike></td>
+				                    <td><span class="label label-fixed">User testing</span></td>
+				                    <td></td>                                        
+				                </tr> 		
+				                <tr>
+				                    <td><strike>Being able to change password is essential functionality</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 					                
+				                <tr>
+				                    <td><strike>Need more margin at the bottom of the editor so that text doesn't ride right to bottom</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 	
+				                <tr>
+				                    <td><strike>Number of words should have thousands separator (comma) in settings and bottom toolbar</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 				                
+				                <tr>
+				                    <td><strike>One report of full novel word count not being accurate compared with per-chapter counts</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 				                
+				                    <td><strike>Not clear in settings that you can always get your work out, whether you ever pay or not</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr>  
 				                <tr>
 				                    <td><strike>Favicon not showing</strike></td>
 				                    <td><span class="label label-fixed">fixed</span></td>
