updating beta page with cursor fix

--- a/public/beta.html
+++ b/public/beta.html
@@ -185,7 +185,7 @@
 				                <tr>
 				                <tr>
 				                    <td><strike>Shows text cursor in non-editable areas - should show default cursor</strike></td>
-				                    <td><span class="label label-fixed">User testing</span></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
 				                    <td></td>                                        
 				                </tr> 		
 				                <tr>
