updating bug page

--- a/public/beta.html
+++ b/public/beta.html
@@ -84,7 +84,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>714</span> testers using it. There are <span>15</span> open bugs and <span>10</span> that have been squashed.</h2>
+				</script></span> days and has <span>914</span> testers using it. There are <span>11</span> open bugs and <span>14</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -111,12 +111,6 @@
 				                    </td>                                       
 				                </tr>
 				                <tr>
-				                    <td>Should alert when going offline as it will no longer be saving and settings/add chapter won't work</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-high">high</span>
-				                    </td>                                       
-				                </tr>
-				                <tr>
 				                    <td>Pasting doesn't bring across bold, italic, strikethrough from google docs or evernote. Works from html.</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-high">high</span>
@@ -129,7 +123,7 @@
 				                </tr> 
 				                <tr>
 				                    <td>Duplicate chapters created when dragging and dropping on Linux with Firefox</td>
-				                    <td>reported</td>
+				                    <td>trying to replicate</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr> 
 				                <tr>
@@ -146,30 +140,15 @@
 				                    <td>Pasting unecessary line breaks when pasting from Word 2010 (and a couple of other unique scenarios)</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
-				                </tr>                                    
-				                <tr>
-				                    <td>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr>                                     
-				                <tr>
-				                    <td>Clicking away from the user menu only works if clicking into header. Should work if click away anywhere on the page.</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr> 				        
-				                <tr>
-				                    <td>Cursor should be in the text input when you click add chpater (shouldn't require a mouse click)</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-low">low</span></td>                                        
-				                </tr> 
+				                </tr>                                                                        			        
 				                <tr>
 				                    <td>The dialog/modal popups judder a little when they open (chrome)</td>
-				                    <td>reported</td>
+				                    <td>in progress</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr>  
 				                <tr>
 				                    <td>Ipad 'Saved' overlaps the novel title</td>
-				                    <td>trying to replicate</td>
+				                    <td>reported</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
@@ -183,6 +162,25 @@
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
+				                    <td><strike>Should alert when going offline as it will no longer be saving and settings/add chapter won't work</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td><strike>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td><strike>Clicking away from the user menu only works if clicking into header. Should work if click away anywhere on the page</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td><strike>Cursor should be in the text input when you click add chpater (shouldn't require a mouse click)</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr> 
 				                <tr>
 				                    <td><strike>Shows text cursor in non-editable areas - should show default cursor</strike></td>
 				                    <td><span class="label label-fixed">fixed</span></td>
@@ -237,7 +235,7 @@
 				            </div>
 					</div>
 				<br>
-				<p class="feature-overview">The two biggest feature requests that have come out of testing are <strong>exporting to multiple formats</strong> which we are currently working on and having <strong>multiple novels</strong> which will come in a later release.</p>
+				<p class="feature-overview">The two biggest feature requests that have come out of testing are <strong>exporting to multiple formats</strong>, which will definitely be there for first release, and <strong>multiple novels</strong> which we would also like in the first release.</p>
 				<p style="text-align:left;">You have let us know what other features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">on the novlr blog</a></p>
 				<p style="text-align:left;">Keep testing and <a href="https://gitreports.com/issue/Novlr/novlr-beta">keep reporting!</a></p>
 			</div>
