--- a/public/beta.html
+++ b/public/beta.html
@@ -31,7 +31,7 @@
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
-							<li><a href="/roadmap.html" title="Plans for Novlr's future">Roadmap</a></li>
+							<li><a href="http://kickstarter.org" title="Go to our Kickstarter project">Kickstarter</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
 					</div>
