--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
-							<li><a href="/roadmap.html" title="Plans for Novlr's future">Roadmap</a></li>
+							<li><a href="http://kickstarter.org" title="Go to our Kickstarter project">Kickstarter</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
 					</div>
@@ -61,8 +61,24 @@
 		</div>
 
 		<div class="container">
-			<div class="wrapper">
-				<h2>Novlr is currently in <span><a href="/beta.html">private beta</a></span> with <span>914</span> beta testers and counting...</h2>
+			<div class="wrapper kickstarter">
+				<a href="kickstarter"><img src="/images/img-kickstarter.jpg" style="margin:auto;"></a>
+				<h3 style="padding: 20px 0;">Help to make these features happen</h3>
+				<div class="middle">
+					<ul class="half">
+						<li>Use Novlr when offline</li>
+						<li>Write more than one novel</li>
+						<li>Tag chapters</li>
+					</ul>
+					<ul class="half" style="float:right;">
+						<li>Eport your work</li>
+						<li>Build character profiles</li>
+						<li>Add notes</li>
+					</ul>
+					<div class="clear" style="margin-bottom:40px;"></div>
+					<a href="kickstarter">Make Novlr happen</a>
+
+				</div>
 			</div>
 		</div>
 
