--- a/public/features.html
+++ b/public/features.html
@@ -41,7 +41,7 @@
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
-							<li><a href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply" title="Go to our Kickstarter project">Kickstarter</a></li>
+							<li><a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply" title="Go to our Kickstarter project">Kickstarter</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
 					</div>
@@ -119,6 +119,14 @@
 				</div>
 			</div>
 		</div>
+
+
+		<div class="container grey">
+			<div class="wrapper kickstarter">
+				<a style="margin:auto;width: 680px;display: block;" target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply"><img src="/images/img-kickstarter.jpg"></a>
+			</div>
+		</div>
+
 		
 
 			<footer>
