--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 						<li>Tag chapters</li>
 					</ul>
 					<ul class="half" style="float:right;">
-						<li>Eport your work</li>
+						<li>Export your work</li>
 						<li>Build character profiles</li>
 						<li>Add notes</li>
 					</ul>
@@ -136,7 +136,7 @@
 		<div class="container grey">
 			<div class="wrapper">
 				<p>We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
-				<a href="http://blog.novlr.org/we-like-feedback">Feedback welcome and encouraged!</a></br></br>
+				<a href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply">Help #makenovlrhappen</a></br></br>
 					<div id="inviteformtwo">
 						<!-- Begin MailChimp Signup Form -->
 						<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
