--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
-							<li><a href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply" title="Go to our Kickstarter project">Kickstarter</a></li>
+							<li><a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply" title="Go to our Kickstarter project">Kickstarter</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
 					</div>
@@ -62,7 +62,7 @@
 
 		<div class="container">
 			<div class="wrapper kickstarter">
-				<a href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply"><img src="/images/img-kickstarter.jpg" style="margin:auto;"></a>
+				<a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply"><img src="/images/img-kickstarter.jpg" style="margin:auto;"></a>
 				<h3 style="padding: 20px 0;">Help to make these features happen</h3>
 				<div class="middle">
 					<ul class="half">
@@ -76,7 +76,7 @@
 						<li>Add notes</li>
 					</ul>
 					<div class="clear" style="margin-bottom:40px;"></div>
-					<a href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply">Make Novlr happen</a>
+					<a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply">Make Novlr happen</a>
 
 				</div>
 			</div>
