--- a/public/beta.html
+++ b/public/beta.html
@@ -84,7 +84,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>914</span> testers using it. There are <span>11</span> open bugs and <span>14</span> that have been squashed.</h2>
+				</script></span> days and has <span>1,514</span> testers using it. There are <span>11</span> open bugs and <span>17</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -159,7 +159,27 @@
 				                <tr>
 				                    <td>Add chapter modal buttons need clearer on-focus borders</td>
 				                    <td>In progress</td>
-				                    <td><span class="label label-low">low</span></td>                                        
+				                    <td><span class="label label-low">low</span></td>                                    
+				                </tr> 
+				                <tr>
+				                    <td>Typo: "you" in the welcome chapter should be "your"</td>
+				                    <td>In progress</td>
+				                    <td><span class="label label-low">low</span></td>                                    
+				                </tr> 
+				                <tr>
+				                    <td><strike>Word count on first log in doesn't include the default chapter until an edit is made</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr>
+				                <tr>
+				                    <td><strike>CRITICAL: Clicking on chapter title or modal inputs broken - cursor defaults to editor</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr>
+				                <tr>
+				                    <td><strike>Log in field for email 'remembers' first name on subsequent log ins</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
 				                </tr> 
 				                <tr>
 				                    <td><strike>Should alert when going offline as it will no longer be saving and settings/add chapter won't work</strike></td>
