removing all mention of kickstarter

--- a/public/beta.html
+++ b/public/beta.html
@@ -31,7 +31,6 @@
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
-							<li><a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply" title="Go to our Kickstarter project">Kickstarter</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
 					</div>
@@ -84,7 +83,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>1,514</span> testers using it. There are <span>11</span> open bugs and <span>17</span> that have been squashed.</h2>
+				</script></span> days and has <span>2,012</span> testers using it. There are <span>11</span> open bugs and <span>17</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -255,7 +254,7 @@
 				            </div>
 					</div>
 				<br>
-				<p class="feature-overview">The two biggest feature requests that have come out of testing are <strong>exporting to multiple formats</strong>, which will definitely be there for first release, and <strong>multiple novels</strong> which we would also like in the first release.</p> Back our project on kickstarter to help <a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply">make novlr happen</a>.
+				<p class="feature-overview">The two biggest feature requests that have come out of testing are <strong>exporting to multiple formats</strong>, which will definitely be there for first release, and <strong>multiple novels</strong> which we would also like in the first release.</p> 
 				<p style="text-align:left;">You have let us know what other features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">on the novlr blog</a></p>
 				<p style="text-align:left;">Keep testing and <a href="https://gitreports.com/issue/Novlr/novlr-beta">keep reporting!</a></p>
 			</div>
@@ -281,7 +280,7 @@
 		<div class="container grey">
 			<div class="wrapper">
 				<p>We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
-				<a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply">Help #makenovlrhappen</a></br></br>
+					</br></br>
 					<div id="inviteformtwo">
 						<!-- Begin MailChimp Signup Form -->
 						<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
