--- a/public/features.html
+++ b/public/features.html
@@ -41,7 +41,6 @@
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
-							<li><a target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply" title="Go to our Kickstarter project">Kickstarter</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
 					</div>
@@ -72,7 +71,7 @@
 		<div class="container grey">
 			<div class="wrapper">
 				<h2>Novlr makes novel writing simple</h2>
-				<p>We have tried writing novels on all sorts of different platforms and just felt none of them did it well enough. So, we're trying to do it better. </p>
+				<p>We have tried writing novels on all sorts of different platforms and just felt none of them did it well enough. So, we're trying to do it better. We'll <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">build what you ask for</a> though, the features here are only the beginning.</p>
 			</div>
 		</div>
 		<div class="container leftalign">
@@ -119,15 +118,7 @@
 				</div>
 			</div>
 		</div>
-
-
-		<div class="container grey">
-			<div class="wrapper kickstarter">
-				<a style="margin:auto;width: 680px;display: block;" target="_blank" href="https://www.kickstarter.com/projects/novlr/novlr-novel-writing-simply"><img src="/images/img-kickstarter.jpg"></a>
-			</div>
-		</div>
-
-		
+	
 
 			<footer>
 				<div class="social">
