--- a/public/pre-order-cancel.html
+++ b/public/pre-order-cancel.html
@@ -42,7 +42,7 @@
 
 		<div class="container grey">
 			<div class="wrapper">
-				<div class="cancel">Oh dear, you didn't complete the checkout. We'd love to know why. Email us at hello@novlr.org and let us know if you just changed your mind, the checkout process was frustrating or something went wrong. Thanks for your support</div>
+				<div class="cancel">Oh dear, you didn't complete the checkout. We'd love to know why. Email us at <a href="mailto:hello@novlr.org">hello@novlr.org</a> and let us know if you just changed your mind, the checkout process was frustrating or something went wrong. Thanks for your support</div>
 				<div class="preorderwords">
 				<h2>Pre-order Novlr for a fraction of the price and help fund development</h2>
 				<p>We continue to build Novlr, with the aim of the first full release in the next few months. In order to do that we need funding to pay for the ongoing design, development and system administration costs. So we thought - we give you a huge saving on the price once that release is out. You in return are helping us make sure Novlr can happen. Win win.</p>
