--- a/public/pre-order-cancel.html
+++ b/public/pre-order-cancel.html
@@ -37,18 +37,19 @@
 				</div>
 			</header>
 			<div class="clear"></div>
-			<h1>You can help make Novlr happen</h1>
+			<h1>A lifetime of writing</h1>
+			<h2 id="secondsentence">Help make Novlr happen</h2>
 			</div>
 
 		<div class="container grey">
 			<div class="wrapper">
 				<div class="cancel">Oh dear, you didn't complete the checkout. We'd love to know why. Email us at <a href="mailto:hello@novlr.org">hello@novlr.org</a> and let us know if you just changed your mind, the checkout process was frustrating or something went wrong. Thanks for your support</div>
 				<div class="preorderwords">
-				<h2>Pre-order Novlr for a fraction of the price and help fund development</h2>
-				<p>We continue to build Novlr, with the aim of the first full release in the next few months. In order to do that we need funding to pay for the ongoing design, development and system administration costs. So we thought - we give you a huge saving on the price once that release is out. You in return are helping us make sure Novlr can happen. Win win.</p>
+				<h2>First 200 lifetime Novlr accounts only $100. Pre-order yours now and help fund development</h2>
+				<p>We're here to build what you - our users - want. In order to do that we need help with the funding to get us out of beta. So we thought we'd give you lovely early birds a huge discount on the price. You in return are helping us make sure Novlr can happen. Win win.</p>
 				</div>
 				<div class="third paypal">
-					<h2 style="color: #89C6D9;margin-bottom: -25px;">Lifetime Novlr</h2>
+					<h2 style="color: #89C6D9;margin-bottom: -25px;">Lifetime of Novlr</h2>
 					<h2>$100 / &pound;63</h2>
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick">
@@ -57,6 +58,25 @@
 					<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 					</form>
 				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="wrapper fontsmall">
+				<h3>Boring disclaimer-y bits</h3>
+
+				<p>Pre-ordering Novlr is a mix of exciting opportunity and a little bit of a gamble. </p>
+
+				<p>Much like our intention on Kickstarter, we will be using the funds to build up the functionality of Novlr until it is ready to come out of beta. Once out of beta we will begin to charge new users of Novlr but you will not have to pay. This means you get access to the best writing tool that exists for years and years to come for a small amount of money.</p>
+
+				<p>We are doing this in good faith. We will spend your money on nothing but building Novlr, but as we stated in our Kickstarter, there is the chance that something may happen that causes Novlr not to happen and we won't be in a position to refund you. Therein lies the gamble. However, we hope that with the year of work we've already invested behind us and the incredible product that is already out there in our beta you can see that this is something we are determined to deliver on.</p>
+
+				<p>So by preordering Novlr you are making Novlr happen. And we salute you for it.</p>
+
+				<h3>What am I buying when I preorder Novlr?</h3>
+				<p>You'll be buying an account on Novlr that you will be able to access for as long as Novlr continues to exist, with all the features we add over time. This will bring you much happiness and joy.</p>
+
+				<h3>What if I change my mind and want a refund?</h3>
+				<p>We don't want anyone to have pre-ordered Novlr and then decide it was a mistake and be stuck with that decision. So we will refund you completely for whatever reason up to seven days after purchase. As we've explained above we will be looking to spend the pre-order money on getting Novlr built so unfortunately after those seven days we won't be able to offer a refund. </p>
 			</div>
 		</div>
 	
