updadting beta deets

--- a/public/beta.html
+++ b/public/beta.html
@@ -83,7 +83,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>2,012</span> testers using it. There are <span>11</span> open bugs and <span>17</span> that have been squashed.</h2>
+				</script></span> days and has <span>2,290</span> testers using it. There are <span>10</span> open bugs and <span>18</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -161,9 +161,9 @@
 				                    <td><span class="label label-low">low</span></td>                                    
 				                </tr> 
 				                <tr>
-				                    <td>Typo: "you" in the welcome chapter should be "your"</td>
-				                    <td>In progress</td>
-				                    <td><span class="label label-low">low</span></td>                                    
+				                    <td><strike>Typo: "you" in the welcome chapter should be "your"<strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>                                    
+				                    <td></td>
 				                </tr> 
 				                <tr>
 				                    <td><strike>Word count on first log in doesn't include the default chapter until an edit is made</strike></td>
