removing reference of invite and linking straight to signup

--- a/public/beta.html
+++ b/public/beta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Novlr Beta | Novlr is in private beta - online novel writing software - free trial</title>
+		<title>Novlr Beta | Novlr is in open beta - online novel writing software - free trial</title>
 		<meta name="description" content="How’s that novel of yours coming along? Now there’s no excuse. Novel writing. Simply.">
 		<link rel="stylesheet" href="./css/default.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
@@ -37,25 +37,10 @@
 				</div>
 			</header>
 			<div class="clear"></div>
-			<h1>Novlr is currently in private Beta</h1>
-			<h2 id="secondsentence">Not long now...</h2>
+			<h1>Novlr is currently in open Beta</h1>
+			<h2 id="secondsentence">No more excuses</h2>
 			<div id="inviteform">
-				<!-- Begin MailChimp Signup Form -->
-				<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-				<style type="text/css">
-				#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-				</style>
-				<div id="mc_embed_signup">
-					<form action="http://novlr.us3.list-manage.com/subscribe/post?u=b83ac6880baafd2a2a94d4242&amp;id=6ac3a64f60" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
-    				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-					<div class="clear"><input type="submit" value="Get your beta invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
-					</form>
-				</div>
-
-				<!--End mc_embed_signup-->
-				
+				<a href="http://beta.novlr.org/signup" class="button">Try Novlr now</a>
     		</div>
 		</div>
 		<div class="container grey">
@@ -282,21 +267,7 @@
 				<p>We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
 					</br></br>
 					<div id="inviteformtwo">
-						<!-- Begin MailChimp Signup Form -->
-						<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-						<style type="text/css">
-						#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-						</style>
-						<div id="mc_embed_signup">
-							<form action="http://novlr.us3.list-manage.com/subscribe/post?u=b83ac6880baafd2a2a94d4242&amp;id=6ac3a64f60" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
-		    				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		    				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-							<div class="clear"><input type="submit" value="Get your beta invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
-							</form>
-						</div>
-
-						<!--End mc_embed_signup-->
+				<a href="http://beta.novlr.org/signup" class="button">Try Novlr now</a>
 				
     				</div>
 			</div>
