--- a/public/features.html
+++ b/public/features.html
@@ -42,6 +42,7 @@
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
+							<li><a href="http://beta.novlr.org/" title="Go write">Log in</a></li>
 						</ul>
 					</div>
 				</div>
@@ -49,22 +50,7 @@
 			<div class="clear"></div>
 			<h1>Just concentrate on the words.</h1>
 				<div id="inviteform">
-					<!-- Begin MailChimp Signup Form -->
-				<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-				<style type="text/css">
-				#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-				</style>
-				<div id="mc_embed_signup">
-					<form action="http://novlr.us3.list-manage.com/subscribe/post?u=b83ac6880baafd2a2a94d4242&amp;id=6ac3a64f60" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
-    				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-					<div class="clear"><input type="submit" value="Get your beta invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
-					</form>
-				</div>
-
-				<!--End mc_embed_signup-->
-				
+					<a href="http://beta.novlr.org/" class="button">Try Novlr now</a>
     			</div>
 			</div>
 
