fixing menu links

--- a/public/features.html
+++ b/public/features.html
@@ -50,7 +50,7 @@
 			<div class="clear"></div>
 			<h1>Just concentrate on the words.</h1>
 				<div id="inviteform">
-					<a href="http://beta.novlr.org/" class="button">Try Novlr now</a>
+					<a href="http://beta.novlr.org/signup" class="button">Try Novlr now</a>
     			</div>
 			</div>
 
