--- a/public/beta.html
+++ b/public/beta.html
@@ -32,6 +32,7 @@
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
 							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
+							<li><a href="http://beta.novlr.org/" title="Go write">Log in</a></li>
 						</ul>
 					</div>
 				</div>
