--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 			<h1>How's that novel of yours coming?</h1>
 			<h2 id="secondsentence">Now there's no excuse.</h2>
 			<div id="inviteform">
-					<a href="http://beta.novlr.org/" class="button">Try Novlr now</a>
+					<a href="http://beta.novlr.org/signup" class="button">Try Novlr now</a>
     		</div>
 		</div>
 
