--- a/public/pre-order.html
+++ b/public/pre-order.html
@@ -72,7 +72,7 @@
 					<p>&nbsp</p>
 					<h3>Boring disclaimer-y bits</h3>
 					<div class="fontsmall">
-					<p>Pre-ordering Novlr is a mix of exciting opportunity and a little bit of a gamble. </p>
+					<p>Buying Lifetime Novlr is a mix of exciting opportunity and a little bit of a gamble. </p>
 
 					<p>Much like our intention on Kickstarter, we will be using the funds to build up the functionality of Novlr until it is ready to come out of beta. Once out of beta we will begin to charge new users of Novlr but you will not have to pay. This means you get access to the best writing tool that exists for years and years to come for a small amount of money.</p>
 
@@ -80,11 +80,11 @@
 
 					<p>So by preordering Novlr you are making Novlr happen. And we salute you for it.</p>
 
-					<h3>What am I buying when I preorder Novlr?</h3>
+					<h3>What am I buying when I buy Lifetime Novlr?</h3>
 					<p>You'll be buying an account on Novlr that you will be able to access for as long as Novlr continues to exist, with all the features we add over time. This will bring you much happiness and joy.</p>
 
 					<h3>What if I change my mind and want a refund?</h3>
-					<p>We don't want anyone to have pre-ordered Novlr and then decide it was a mistake and be stuck with that decision. So we will refund you completely for whatever reason up to seven days after purchase. As we've explained above we will be looking to spend the pre-order money on getting Novlr built so unfortunately after those seven days we won't be able to offer a refund. </p>
+					<p>We don't want anyone to have pre-ordered Novlr and then decide it was a mistake and be stuck with that decision. So we will refund you completely for whatever reason up to seven days after purchase. As we've explained above we will be looking to spend the money on getting Novlr built so unfortunately after those seven days we won't be able to offer a refund. </p>
 					</div>
 				</div>
 
