adding new lifetimes

--- a/public/lifetime-heroes.html
+++ b/public/lifetime-heroes.html
@@ -50,7 +50,26 @@
 		</div>
 		<div class="container">
 			<div class="wrapper lifetimes">
-				<div>			
+				<div>	
+					<h3>Funded "Multiple novels" - 6 Heroes<span>Released 1 September 2015 - <a href="http://blog.novlr.org/release-blog-0-2-0-redesign-multiple-novels-user-statistics-and-more/">read the release blog</a></span></h3>
+					<ul>
+						<li>Andrew Hodges</li>
+						<li>Wendy Matheson</li>
+						<li>Nicola White</li>
+						<li>Catherine Emmett</li>
+						<li>Jim Moran</li>
+						<li>Katarina Takahashi</li>
+					</ul><br><br>	
+					<h3>Funded "Exporting" - 7 Heroes<span>Released 2 June 2015 - <a href="http://blog.novlr.org/new-feature-release-exporting-your-novel/">read the release blog</a></span></h3>
+					<ul>
+						<li>Charity Thomas</li>
+						<li>Brad Haakenson</li>
+						<li>Paul Swann</li>
+						<li>Benjamin Randall</li>
+						<li>Jo Hatcher</li>
+						<li>Rachel Moore</li>
+						<li>Anonymous Funder</li>
+					</ul><br><br>		
 					<h3>Funded "Offline writing" - 37 Heroes<span>Released 5 February 2015 - <a href="http://blog.novlr.org/offline-writing-is-here-2/">read the release blog</a></span></h3>
 					<ul>
 						<li>Ellie Dawes</li>
